app/assets/stylesheets/navbar.scss
.navbar-toggler {
  border: 0px !important;
}
#nav {
  z-index: 9999;
  transition: background-color 0.4s ease-out, font-size 0.1s ease, height 0.15s ease,
    top 0.4s ease-out;
  padding: 11px 1rem;
  @media screen and (min-width: 768px) {
    height: 60px;
  }
}
// add overlay for glass effect
#nav.navbar-transparent {
  background: rgba(250, 250, 250, 0.15) !important;
  border-bottom: 1px solid rgba(250, 250, 250, 0.2) !important;
  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.2) !important;

  .navbar-brand {
    color: rgba(250, 250, 250, 0.9);
  }
  .nav-link {
    color: rgba(250, 250, 250, 0.9);
  }
}
// make nav links and brand white when on the home page

.navbar-brand {
  font-family: 'Poppins', sans-serif;
  font-size: 2em !important;
  @media screen and (min-width: 768px) {
    margin-right: 1.5em !important;
  }
}
#nav .container {
  @media (max-width: 768px) {
    min-width: 100% !important;
  }
}

.navbar-social {
  display: flex;
  justify-content: space-around;
  a {
    padding-left: 15px;
    font-size: 1.8em;
    @media screen and (min-width: 768px) {
      font-size: 1.15em;
    }
  }
}

.nav-link {
  @media (max-height: 600px) {
    font-size: 1em !important;
  }
  display: flex !important;
  justify-content: center;
  font-size: 1.25em !important;
  padding: 1rem 0 !important;
  opacity: 0;
  @media (min-width: 768px) {
    opacity: 1;
    position: relative !important;
    padding: 0.2rem 0.6rem !important;
    font-size: 1.2em !important;
    font-weight: 500;
  }
}

.nav-link.active {
  font-weight: 800;
  font-family: 'Poppins', sans-serif;
}

// animation and style for burger menu
.icon-bar {
  width: 22px;
  height: 2px;
  background-color: #b6b6b6;
  display: block;
  transition: all 0.2s;
  margin-top: 4px;
}
.bottom-bar {
  margin-bottom: 4px;
}

.navbar-toggler {
  border: none;
  background: transparent !important;
  outline-color: transparent !important;
}
.navbar-toggler .top-bar {
  transform: rotate(45deg);
  transform-origin: 10% 10%;
}

.navbar-toggler .middle-bar {
  opacity: 0;
}

.navbar-toggler .bottom-bar {
  transform: rotate(-45deg);
  transform-origin: 10% 90%;
}

.navbar-toggler.collapsed .top-bar {
  transform: rotate(0);
}

.navbar-toggler.collapsed .middle-bar {
  opacity: 1;
}

.navbar-toggler.collapsed .bottom-bar {
  transform: rotate(0);
}

